...
        let result = UIView()
        result.backgroundColor = UIColor(white: 0.95, alpha: 1)
        return result
    }()
    
    private lazy var fromLabel: SubtitleView = {
        let result = SubtitleView(subtitle: "From")
        return result
    }()
    
    private lazy var toLabel: SubtitleView = {
        let result = SubtitleView(subtitle: "To")
        return result
    }()
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        setupLayout()
...
