...
        result.backgroundColor = UIColor(white: 0.95, alpha: 1)
        return result
    }()
    
    private lazy var titleLabel: UILabel = {
        let result = UILabel()
        result.text = "Delivery Fee"
        return result
    }()
    
    private lazy var feeLabel: UILabel = {
        let result = UILabel()
        return result
...
