...
        result.backgroundColor = UIColor(white: 0.95, alpha: 1)
        return result
    }()
    
    private lazy var titleLabel: UILabel = {
        let result = UILabel()
        result.text = "Goods to deliver"
        return result
    }()
    
    private lazy var imageView: UIImageView = {
        let result = UIImageView()
        result.layer.borderColor = UIColor.black.cgColor
...
